# AnnotationTool

backend/: main.py  pyproject.toml
frontend/: pubspec.yaml  start.dev.sh
frontend/android/app/src/main/: AndroidManifest.xml
frontend/lib/: main.dart
frontend/windows/runner/: Runner.rc  main.cpp
