[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["dskkato <kato.daisuke429@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8,<3.9"
fastapi = "^0.63.0"
uvicorn = "^0.13.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^20.8b1", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
